--- a/css/base/cammon.css
+++ b/css/base/cammon.css
@@ -19,6 +19,8 @@ ol {
 
 img {
     display: block;
+        max-width: 100%;
+        height: auto;
 }
 body {
     font-family: 'Roboto', sans-serif;
