--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -18,15 +18,6 @@
     color: #4D5AE5;
     text-decoration: none;}
 
-.alogo{color: #2e2f42;
-    font-family: "Raleway";
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase; }
-
 
 .burger-manu{ 
      border: none;
@@ -189,7 +180,7 @@
 
 /* ====================HEADER TABLET ====================*/
 
-@media screen and (width: 768px) {
+@media screen and (min-width: 768px) {
 
     .address-email { text-decoration: none;
         font-style: normal;
@@ -299,6 +290,7 @@
 
 
 /**================PC VERSION===========*/
+
   @media screen and (min-width: 1158px){
 .page-header-top-botom {
     border-bottom: 1px solid   #e7e9fc;
@@ -344,7 +336,6 @@
     text-transform: uppercase;
     color: #4D5AE5;
     text-decoration: none;
-    margin-right: 76px;
     align-items: center;
     display: flex;
 }
@@ -367,6 +358,8 @@
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    margin-left: 76px;
+
 }
 
 .link {
@@ -380,6 +373,7 @@
     text-decoration: none;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 24px 0;
+
 
 }
 
@@ -400,6 +394,10 @@
     font-style: normal;
     font-family: normal;
 }
+.active-link::after {
+    bottom: -3px;
+}
+
 }
         
 
